tests/negative/gold/lambda3_test.gold
tests/negative/lambda3_test.toit:23:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/lambda3_test.toit:14:9: error: Type mismatch. Expected 'string'. Got 'int'
  a.foo 5
        ^
tests/negative/lambda3_test.toit:15:15: error: Type mismatch. Expected 'string'. Got 'int'
  run:: a.foo 3
              ^
tests/negative/lambda3_test.toit:21:12: error: Type mismatch. Expected 'string'. Got 'int'
    a2.foo 499
           ^~~
Compilation failed.
